# event-correlator

./: Cargo.toml  README.md  dev-build.sh  pyproject.toml
src/: lib.rs  main.rs  processor.rs  rules.rs
src/processor/: tests.rs
src/rules/: calendar.js.rs  jump.rs  pair.rs  single.rs  suppress.rs  tests.rs
src/rules/single/: tests.rs
