[package]
name = "event_correlator"
version = "0.1.0"
edition = "2021"

[lib]
name = "event_correlator"
crate-type = ["cdylib"]

[[bin]]
name = "event-correlator"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.80"
# indicatif = "0.17.7"
# itertools = "0.12.0"
pyo3 = "0.20.2"
thiserror = "1.0.57"
